// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Slider renders correctly when initialized on 1`] = `
<div
  className="obojobo-draft--components--slider"
>
  <span
    contentEditable={false}
  >
    
  </span>
  <label
    className="switch"
  >
    <input
      checked={true}
      className="slider"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="slider round"
    />
  </label>
</div>
`;

exports[`Slider Slider renders correctly with a title 1`] = `
<div
  className="obojobo-draft--components--slider"
>
  <span
    contentEditable={false}
  >
    mocktitle
  </span>
  <label
    className="switch"
  >
    <input
      checked={false}
      className="slider"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="slider round"
    />
  </label>
</div>
`;

exports[`Slider Slider renders correctly with no options set 1`] = `
<div
  className="obojobo-draft--components--slider"
>
  <span
    contentEditable={false}
  >
    
  </span>
  <label
    className="switch"
  >
    <input
      checked={false}
      className="slider"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="slider round"
    />
  </label>
</div>
`;
